--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "html2pdf.js": "^0.12.1",
-    "next": "15.5.6",
+    "html2pdf.js": "^0.13.0",
+    "next": "^15.5.9",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
